cabal-version:       >=1.10
name:                mathematica-haskell
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable mathematica-haskell
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13,
                       bytestring,
                       text,
                       zeromq4-haskell,
                       hint,
                       aeson
  default-language:    Haskell2010
