cabal-version:       >=1.10
name:                mathematica-haskell
version:             0.1.0.0
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
build-type:          Simple

executable mathematica-haskell
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13,
                       bytestring,
                       text,
                       containers,
                       bytestring,
                       transformers,
                       exceptions,
                       zeromq4-haskell,
                       hint,
                       aeson
  default-language:    Haskell2010
